Finished the static page designs for the guide pages

--- a/static/encounters/encounters.html
+++ b/static/encounters/encounters.html
@@ -32,9 +32,9 @@
 
       <!-- Stuff nav shows when on stuff pages(ie. campaigns, encounters, characters, etc.) -->
       <nav id='stuff-nav'>
-        <a class='stuff-nav-links btn-type-1-hover nav-links active' href="/stuff.html" end>My Stuff</a>
-        <a class='stuff-nav-links btn-type-1-hover nav-links' href="../campaigns/campaigns.html">My Campaigns</a>
-        <a class='stuff-nav-links btn-type-1-hover nav-links' href="../encounters/encounters.html">My Encounters</a>
+        <a class='stuff-nav-links btn-type-1-hover nav-links' href="/static/stuff/stuff.html" end>My Stuff</a>
+        <a class='stuff-nav-links btn-type-1-hover nav-links' href="/static/campaigns/campaigns.html">My Campaigns</a>
+        <a class='stuff-nav-links btn-type-1-hover nav-links active' href="/static/encounters/encounters.html">My Encounters</a>
       </nav>
 
 
