--- a/static/guide/monsters.html
+++ b/static/guide/monsters.html
@@ -30,7 +30,7 @@
 
       <section class='page-layout-4'>
         <header class='guide-title'>
-          <a class='btn-type-1 btn-type-1-hover guide-back-btn' href='/static/guide/guide.html'>&lt Back</a>
+          <a class='btn-type-2 btn-type-2-hover guide-back-btn' href='/static/guide/guide.html'>&lt Back</a>
           <h1 class="title-2">Monsters</h1>
         </header>
   
@@ -74,17 +74,16 @@
                 <option>Gargantuan</option>
               </select>
             </div>
-            <button class="btn-type-1 btn-type-1-hover" type='submit'>Filter</button>
-            <button class='btn-type-1 btn-type-1-hover' type='reset'>Clear Filters</button>
+            <button class="btn-type-2 btn-type-2-hover" type='submit'>Filter</button>
+            <button class='btn-type-2 btn-type-2-hover' type='reset'>Clear Filters</button>
           </form>
           <!-- {viewPopup ? renderPopup() : ''} -->
   
           <!-- <GuideFilter type={type} setGuideData={setGuideData} /> -->
   
           <section class='guide-results'>
-            <p class="title-3">Results</p>
+            <!-- <p class="title-3">Results</p> -->
             <div class="guide-result" id="guide-result-head">
-              <p></p>
               <h2>Name</h2>
               <p>Size</p>
               <p>HP</p>
@@ -92,8 +91,9 @@
               <p>CR</p>
               <p>XP</p>
             </div>
+
+            <!-- Actual monster data will be displayed here, for the static page this is just one repeated for ease of use -->
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -102,7 +102,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -111,7 +110,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -120,7 +118,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -129,7 +126,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -138,7 +134,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -147,7 +142,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -156,7 +150,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -165,7 +158,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -174,7 +166,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
@@ -183,7 +174,6 @@
               <p>3900</p>
             </div>
             <div class='guide-result'>
-              <p></p>
               <h2>Frost Giant</h2>
               <p>Huge</p>
               <p>138</p>
