--- a/static/home.html
+++ b/static/home.html
@@ -41,7 +41,7 @@
             This application is meant to be an assisstant for Dungeon Masters as they run campaigns. There are two main pieces to this site: a guide section and a "stuff" section. Both have links further down as well as in the nav bar at the top.
           </p>
           <p>
-            The guide contains all avaiable <a href='https://media.wizards.com/2016/downloads/DND/SRD-OGL_V5.1.pdf' target='_blank'>OGL data</a> as well as any user creations! The data is sectioned into related sets of data for ease of viewing(monsters, spells, etc.). There are is a search/filter section for each of the sections. The goal of this section is to provide quick access to the stats and info of different things for players and dm's for in-game reference and study.
+            The guide contains all available <a href='https://media.wizards.com/2016/downloads/DND/SRD-OGL_V5.1.pdf' target='_blank'>OGL data</a> as well as any user creations! The data is sectioned into related sets of data for ease of viewing(monsters, spells, etc.). There are is a search/filter section for each of the sections. The goal of this section is to provide quick access to the stats and info of different things for players and dm's for in-game reference and study.
           </p>
           <p>
             The "Stuff" section can only be used if signed in. The goal of this section is to help track created campaigns, encounters, characters and more! Inside of this section is all of your specific creations, from campaigns to spells to items!
@@ -54,13 +54,13 @@
         <section class='collections-display'>
           <div class="collections">
             <p>Guides</p>
-            <a href="/static/guide/guide.html" class="btn-type-1 btn-type-1-hover">View</a>
+            <a href="/static/guide/guide.html" class="btn-type-2 btn-type-2-hover">View</a>
           </div>
   
           <div class="collections">
-            <p>Stuff</br>(Must be signed in)</p>
+            <p>My Stuff</br>(Must be signed in)</p>
             <!-- Even though in nav, user is shown as logged in, this shows what the button looks like when not signed in -->
-            <a href="/static/stuff/stuff.html" class="btn-type-1 unavailable">View</a>
+            <a href="/static/stuff/stuff.html" class="btn-type-2 btn-type-2-hover unavailable">View</a>
           </div>
         </section>
       </div>
