added footer to pages

--- a/static/stuff/stuff.html
+++ b/static/stuff/stuff.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="../nav.css">
+    <link rel="stylesheet" href="../footer.css">
     <link rel="stylesheet" href="../stuff-nav.css">
     <title>DragonMasters Static</title>
   </head>
@@ -26,6 +27,7 @@
           <p>Welcome, Rogue</p>
           <button
             class='nav-links btn-type-1-hover login-logout'
+            href="/static/users/login.html"
           >Logout</button>
         </div>
       </nav>
@@ -42,13 +44,13 @@
         <div class='collections-display'>
           <div class='collections'>
             <h2>My Campaigns</h2>
-            <h4>4 saved Campaigns</h4>
+            <h4>2 saved Campaigns</h4>
             <a class="btn-type-2 btn-type-2-hover" href="/static/campaigns/campaigns.html">View All Campaigns</a>
             <a class="btn-type-3 btn-type-3-hover" >+ Create New</a>
           </div>
           <div class='collections'>
             <h2>My Encounters</h2>
-            <h4>4 saved Encounters</h4>
+            <h4>5 saved Encounters</h4>
             <a class="btn-type-2 btn-type-2-hover" href="/static/encounters/encounters.html">View All Encounters</a>
             <a class="btn-type-3 btn-type-3-hover" >+ Create New</a>
           </div>
@@ -63,12 +65,27 @@
           </div>
           <div class='collections'>
             <h2>My Spells</h2>
-            <h4>4 saved Spells</h4>
+            <h4>7 saved Spells</h4>
             <a class="btn-type-2 btn-type-2-hover" href="/static/spells/spells.html">View All Spells</a>
             <a class="btn-type-3 btn-type-3-hover" >+ Create New</a>
           </div>
         </div>
       </section>
+
+      <footer id="main-footer">
+        <div id="copyright-stuff">
+          <img class="small-logo" src="../../client/images/logo.png" alt="logo" />
+          <h3>DragonMasters</h3>
+          <p>&copy2023 DragonMasters</p>
+        </div>
+
+        <div id="social-stuff">
+          <a class="social-link">
+            <img class="social-img" src="../../client/images/github-mark.png" alt="Github"/>
+            <p>Github</p>
+          </a>
+        </div>
+      </footer>
 
     </div>
 
