--- a/static/campaigns/campaigns.html
+++ b/static/campaigns/campaigns.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="../nav.css">
+    <link rel="stylesheet" href="../footer.css">
     <link rel="stylesheet" href="../stuff-nav.css">
     <title>DragonMasters Static</title>
   </head>
@@ -37,7 +38,25 @@
         <a class='stuff-nav-links btn-type-1-hover nav-links' href="/static/encounters/encounters.html">My Encounters</a>
       </nav>
 
+      <div>
+        <h2>My Campaigns</h2>
+        
+      </div>
 
+      <footer id="main-footer">
+        <div id="copyright-stuff">
+          <img class="small-logo" src="../../client/images/logo.png" alt="logo" />
+          <h3>DragonMasters</h3>
+          <p>&copy2023 DragonMasters</p>
+        </div>
+
+        <div id="social-stuff">
+          <a class="social-link">
+            <img class="social-img" src="../../client/images/github-mark.png" alt="Github"/>
+            <p>Github</p>
+          </a>
+        </div>
+      </footer>
 
     </div>
 
