--- a/static/guide/guide.html
+++ b/static/guide/guide.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="../nav.css">
+    <link rel="stylesheet" href="../footer.css">
     <link rel="stylesheet" href="./guide.css">
     <title>DragonMasters Static</title>
   </head>
@@ -24,6 +25,7 @@
         <div class='main-nav-divs' id='nav-right'>
           <a
             class='nav-links btn-type-1-hover login-logout'
+            href="/static/users/login.html"
           >Log in/Sign up</a>
         </div>
       </nav>
@@ -46,6 +48,21 @@
           </div>
         </section>
       </section>
+
+      <footer id="main-footer">
+        <div id="copyright-stuff">
+          <img class="small-logo" src="../../client/images/logo.png" alt="logo" />
+          <h3>DragonMasters</h3>
+          <p>&copy2023 DragonMasters</p>
+        </div>
+
+        <div id="social-stuff">
+          <a class="social-link">
+            <img class="social-img" src="../../client/images/github-mark.png" alt="Github"/>
+            <p>Github</p>
+          </a>
+        </div>
+      </footer>
 
     </div>
 
