--- a/static/home.html
+++ b/static/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./nav.css">
+    <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./home.css">
     <title>DragonMasters Static</title>
   </head>
@@ -25,6 +26,7 @@
         <div class='main-nav-divs' id='nav-right'>
           <p>Welcome, Rogue</p>
           <a
+            href="/static/users/login.html"
             class='nav-links btn-type-1-hover login-logout'
           >Logout</a>
         </div>
@@ -33,6 +35,7 @@
       <div class="page-layout-1">
         <section id="opener">
           <h1 class="opac-box">DragonMasters</h1>
+          <h2 class="opener-desc">Start your next adventure now</h2>
           <img src="../client/images/boss-battle.jpeg" alt="boss-battle-image" id="opener-img"/>
         </section>
   
@@ -64,6 +67,21 @@
           </div>
         </section>
       </div>
+
+      <footer id="main-footer">
+        <div id="copyright-stuff">
+          <img class="small-logo" src="../client/images/logo.png" alt="logo" />
+          <h3>DragonMasters</h3>
+          <p>&copy2023 DragonMasters</p>
+        </div>
+
+        <div id="social-stuff">
+          <a class="social-link">
+            <img class="social-img" src="../client/images/github-mark.png" alt="Github"/>
+            <p>Github</p>
+          </a>
+        </div>
+      </footer>
 
     </div>
 
