updated logout/login buttons to route to login page

--- a/static/encounters/encounters.html
+++ b/static/encounters/encounters.html
@@ -25,9 +25,10 @@
 
         <div class='main-nav-divs' id='nav-right'>
           <p>Welcome, Rogue</p>
-          <button
+          <a
+            href="/static/users/login.html"
             class='nav-links btn-type-1-hover login-logout'
-          >Logout</button>
+          >Logout</a>
         </div>
       </nav>
 
@@ -38,6 +39,24 @@
         <a class='stuff-nav-links btn-type-1-hover nav-links active' href="/static/encounters/encounters.html">My Encounters</a>
       </nav>
 
+      <div class="page-layout-2">
+        <h2 class="title-2">My Encounters</h2>
+
+        <button class="btn-type-3 btn-type-3-hover create-btn">+ Create New</button>
+
+        <div class="dashboard">
+          <div class="dashboard-item">
+            <h3>Troll fight</h3>
+            <p>Frozen Solid</p>
+            <p>Short Description</p>
+            <p>Troll Cave</p>
+            <p>Frodo, Sam, Gandalf</p>
+            <button class="btn-type-2 btn-type-2-hover">View</button>
+          </div>
+          
+        </div>
+
+      </div>
 
       <footer id="main-footer">
         <div id="copyright-stuff">
