--- a/static/stuff/stuff.html
+++ b/static/stuff/stuff.html
@@ -25,10 +25,10 @@
 
         <div class='main-nav-divs' id='nav-right'>
           <p>Welcome, Rogue</p>
-          <button
-            class='nav-links btn-type-1-hover login-logout'
+          <a
             href="/static/users/login.html"
-          >Logout</button>
+            class='nav-links btn-type-1-hover login-logout'
+          >Logout</a>
         </div>
       </nav>
 
