--- a/static/users/login.html
+++ b/static/users/login.html
@@ -12,7 +12,7 @@
     <title>DragonMasters Static</title>
   </head>
   <body>
-    <div id="app">
+    <!-- <div id="app"> -->
 
       <div class="login-register-page">
         <div class="login-form-container">
@@ -28,14 +28,14 @@
               <label>Password</label>
               <input />
             </div>
-            <button class="btn-type-2 btn-type-2-hover">Login</button>
+            <a href="/static/stuff/stuff.html" class="btn-type-2 btn-type-2-hover">Login</a>
             <p>New to the site? <a href="/static/users/register.html">Sign up here!</a></p>
           </form>
           <div class="login-image">Start your next adventure now</div>
         </div>
       </div>
 
-    </div>
+    <!-- </div> -->
 
   </body>
 </html>
