--- a/static/guide/spells.html
+++ b/static/guide/spells.html
@@ -24,6 +24,7 @@
 
         <div class='main-nav-divs' id='nav-right'>
           <a
+            href="/static/users/login.html"
             class='nav-links btn-type-1-hover login-logout'
           >Log in/Sign up</a>
         </div>
