updated design of static pages

--- a/static/guide/guide.html
+++ b/static/guide/guide.html
@@ -18,13 +18,13 @@
       <nav id="main-nav">
         <div class="main-nav-divs" id="main-nav-left">
           <img class="medium-logo" src="../../client/images/logo.png" alt="small-logo"/>
-          <a class="nav-links btn-type-1-hover" href="/static/home.html"><h3>DragonMasters</h3></a>
-          <a class="nav-links btn-type-1-hover active" href="/static/guide/guide.html">Guide</a>
+          <a class="nav-links" href="/static/home.html"><h3>DragonMasters</h3></a>
+          <a class="nav-links active" href="/static/guide/guide.html">Guide</a>
         </div>
 
         <div class='main-nav-divs' id='nav-right'>
           <a
-            class='nav-links btn-type-1-hover login-logout'
+            class='btn login-logout'
             href="/static/users/login.html"
           >Log in/Sign up</a>
         </div>
@@ -40,11 +40,11 @@
         <section class='collections-display'>
           <div class="collections">
             <h3>Monsters</h3>
-            <a class='btn-type-2 btn-type-2-hover' href='/static/guide/monsters.html'>View</a>
+            <a  class="btn btn-type-1 btn-color-1" href='/static/guide/monsters.html'>View</a>
           </div> 
           <div class="collections">
             <h3>Spells</h3>
-            <a class='btn-type-2 btn-type-2-hover' href='/static/guide/spells.html'>View</a>
+            <a  class="btn btn-type-1 btn-color-1" href='/static/guide/spells.html'>View</a>
           </div>
         </section>
       </section>
