--- a/static/guide/monsters.html
+++ b/static/guide/monsters.html
@@ -32,7 +32,7 @@
 
       <section class='page-layout-2'>
         <header class='guide-title'>
-          <a class='btn-type-2 btn-type-2-hover guide-back-btn' href='/static/guide/guide.html'>&lt Back</a>
+          <a class='btn btn-type-1 btn-color-1 guide-back-btn' href='/static/guide/guide.html'>&lt Back</a>
           <h1 class="title-2">Monsters</h1>
         </header>
   
@@ -40,24 +40,25 @@
   
           <form id="guide-filters">
             <p class="form-header">Filters</p>
+            <button id='clear-btn' class='btn btn-color-1' type='reset'>Clear Filters</button>
             <div class="form-piece">
               <label for="filter-name">Name</label>
-              <input id="filter-name" placeholder='ex: Dragon'/>
+              <input id="filter-name" class="full-form" placeholder='ex: Dragon'/>
             </div>
             <div class="form-piece">
-              <label for="filter-cr-min">Challenge Rating Min</label>
+              <label for="filter-cr-min">Challenge Rating</label>
               <input
-              id="filter-cr-min"
-              placeholder='ex: 2'
-              type='number'
-              min='0'
-              max='30'
+                id="filter-cr-min"
+                class="split-form"
+                placeholder='ex: 2'
+                type='number'
+                min='0'
+                max='30'
               />
-            </div>
-            <div class="form-piece">
-              <label for="filter-cr-max">Challenge Rating Max</label>
+              <p>-</p>
               <input
                 id="filter-cr-max"
+                class="split-form"
                 placeholder='ex: 14'
                 type='number'
                 min='0'
@@ -66,7 +67,7 @@
             </div>
             <div class="form-piece">
               <label for="filter-size">Size</label>
-              <select id="filter-size">
+              <select id="filter-size" class="full-form">
                 <option selected value=''>Select Size</option>
                 <option>Tiny</option>
                 <option>Small</option>
@@ -76,116 +77,116 @@
                 <option>Gargantuan</option>
               </select>
             </div>
-            <button class="btn-type-2 btn-type-2-hover" type='submit'>Filter</button>
-            <button class='btn-type-2 btn-type-2-hover' type='reset'>Clear Filters</button>
+            <!-- <button class='btn btn-type-2 btn-color-1' type='submit'>Filter</button> -->
           </form>
           <!-- {viewPopup ? renderPopup() : ''} -->
   
           <!-- <GuideFilter type={type} setGuideData={setGuideData} /> -->
   
-          <section class='guide-results'>
-            <!-- <p class="title-3">Results</p> -->
-            <div class="guide-result" id="guide-result-head">
-              <h2>Name</h2>
-              <p>Size</p>
-              <p>HP</p>
-              <p>AC</p>
-              <p>CR</p>
-              <p>XP</p>
-            </div>
+          <table class='guide-results'>
+            <thead>
+              <tr class="guide-result" id="guide-result-head">
+                <th class="result-name">Name</th>
+                <th>Type</th>
+                <th>Size</th>
+                <th>HP</th>
+                <th>AC</th>
+                <th>CR / XP</th>
+              </tr>
+            </thead>
 
-            <!-- Actual monster data will be displayed here, for the static page this is just one repeated for ease of use -->
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-            <div class='guide-result'>
-              <h2>Frost Giant</h2>
-              <p>Huge</p>
-              <p>138</p>
-              <p>15</p>
-              <p>8</p>
-              <p>3900</p>
-            </div>
-
+            <tbody>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+              <tr class='guide-result'>
+                <td class="result-name">Frost Giant</td>
+                <td>Monstrosity</td>
+                <td>Huge</td>
+                <td>138</td>
+                <td>15</td>
+                <td>8 / 3900</td>
+              </tr>
+            </tbody>
             
-          </section>
+          </table>
   
         </section>
       </section>
