--- a/static/users/login.html
+++ b/static/users/login.html
@@ -22,13 +22,13 @@
             <p class="form-header">Login</p>
             <div class="form-piece">
               <label>Username</label>
-              <input />
+              <input class='full-form'/>
             </div>
             <div class="form-piece">
               <label>Password</label>
-              <input />
+              <input class='full-form'/>
             </div>
-            <a href="/static/stuff/stuff.html" class="btn-type-2 btn-type-2-hover">Login</a>
+            <a href="/static/stuff/stuff.html" class="btn btn-type-1 btn-color-1">Login</a>
             <p>New to the site? <a href="/static/users/register.html">Sign up here!</a></p>
           </form>
           <div class="login-image">Start your next adventure now</div>
