--- a/static/users/register.html
+++ b/static/users/register.html
@@ -22,17 +22,17 @@
             <p class="form-header">Create a new account</p>
             <div class="form-piece">
               <label>Username</label>
-              <input />
+              <input class='full-form'/>
             </div>
             <div class="form-piece">
               <label>Password</label>
-              <input />
+              <input class='full-form'/>
             </div>
             <div class="form-piece">
               <label>Confirm Password</label>
-              <input />
+              <input class='full-form'/>
             </div>
-            <a href="/static/stuff/stuff.html" class="btn-type-2 btn-type-2-hover">Sign In</a>
+            <a href="/static/stuff/stuff.html" class="btn btn-type-1 btn-color-1">Sign In</a>
             <p>Already have an account? <a href="/static/users/login.html">Log in here!</a></p>
           </form>
           <div class="login-image">Start your next adventure now</div>
